5분 마다 5초 지났을때 print 하도록 스케쥴러 기초 코드

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "id": "905a1cdf",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "id": "93536e30",
    "metadata": {},
    "outputs": [],
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "7c3c5ef9",
+   "execution_count": 74,
+   "id": "af682001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230a036f",
+   "id": "ae3e7317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "id": "c450d5a2",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'free': 81.1223964, 'used': 0.0, 'total': 81.1223964}\n"
+      "{'free': 80.2898479, 'used': 0.76103315, 'total': 80.967141}\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1fc8eee9",
+   "id": "e973d508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a6f7f699",
+   "id": "7bc36876",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3190a70a",
+   "id": "dd2ef238",
    "metadata": {},
    "source": [
     "---"
@@ -269,55 +269,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "id": "95880f48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 현재 포지션 확인\n",
-    "balance = binance.fetch_balance()\n",
-    "position = [x for x in balance['info']['positions'] if x['symbol'] == \"ETHUSDT\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "43d095d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'symbol': 'ETHUSDT',\n",
-       " 'initialMargin': '0.77241600',\n",
-       " 'maintMargin': '0.03862080',\n",
-       " 'unrealizedProfit': '0.02444000',\n",
-       " 'positionInitialMargin': '0.77241600',\n",
-       " 'openOrderInitialMargin': '0',\n",
-       " 'leverage': '10',\n",
-       " 'isolated': True,\n",
-       " 'entryPrice': '3849.86',\n",
-       " 'maxNotional': '4000000',\n",
-       " 'positionSide': 'BOTH',\n",
-       " 'positionAmt': '0.002',\n",
-       " 'notional': '7.72416000',\n",
-       " 'isolatedWallet': '0.77075211',\n",
-       " 'updateTime': '1634482056016'}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'symbol': 'ETHUSDT', 'initialMargin': '0.76107348', 'maintMargin': '0.03805367', 'unrealizedProfit': '-0.08898516', 'positionInitialMargin': '0.76107348', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '3849.86', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '0.002', 'notional': '7.61073483', 'isolatedWallet': '0.76668155', 'updateTime': '1634486400385'}\n"
+     ]
     }
    ],
    "source": [
-    "position"
+    "# 현재 포지션 확인\n",
+    "balance = binance.fetch_balance()\n",
+    "position = [x for x in balance['info']['positions'] if x['symbol'] == \"ETHUSDT\"][0]\n",
+    "print(position)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7315a32d",
+   "id": "25fdcf47",
    "metadata": {},
    "outputs": [
     {
@@ -381,19 +355,19 @@
    ],
    "source": [
     "# 현재 포지션 2퍼 위에 매도 예약\n",
-    "targetPrice = round(float(position[\"entryPrice\"]) * 1.0022, 2)\n",
-    "print(targetPrice)\n",
-    "binance.create_limit_sell_order(\n",
-    "    symbol = 'ETH/USDT',\n",
-    "    amount = 0.002,\n",
-    "    price = targetPrice\n",
-    ")"
+    "# targetPrice = round(float(position[\"entryPrice\"]) * 1.0022, 2)\n",
+    "# print(targetPrice)\n",
+    "# binance.create_limit_sell_order(\n",
+    "#     symbol = 'ETH/USDT',\n",
+    "#     amount = 0.002,\n",
+    "#     price = targetPrice\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7cc22e4e",
+   "id": "f7f800d1",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9313998a",
+   "id": "c1a4b104",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b306febf",
+   "id": "40d6a1a3",
    "metadata": {},
    "outputs": [],
    "source": []
