초기 활성화 코드와 slack 알림 보내는 코드 구현

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "af682001",
+   "id": "d213afe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae3e7317",
+   "id": "38124c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "id": "1f770650",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3856.03 3971.0 3803.56 3879.13\n"
+      "3854.69 3925.95 3752.0 3796.35\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e973d508",
+   "id": "a10c100a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7bc36876",
+   "execution_count": 85,
+   "id": "08b5928e",
    "metadata": {
     "scrolled": true
    },
@@ -165,16 +165,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-10-17 22:50:00 [3856.91, 3857.28, 3850.42, 3854.45, 2493.038]\n",
-      "2021-10-17 22:55:00 [3854.52, 3865.45, 3853.96, 3864.68, 4092.774]\n",
-      "2021-10-17 23:00:00 [3864.68, 3868.26, 3858.48, 3864.62, 3955.104]\n",
-      "2021-10-17 23:05:00 [3864.62, 3867.22, 3857.8, 3859.89, 2466.924]\n",
-      "2021-10-17 23:10:00 [3859.9, 3860.96, 3854.25, 3855.39, 1815.433]\n",
-      "2021-10-17 23:15:00 [3855.42, 3863.05, 3855.23, 3860.64, 2854.67]\n",
-      "2021-10-17 23:20:00 [3860.63, 3864.06, 3855.1, 3855.11, 1695.829]\n",
-      "2021-10-17 23:25:00 [3855.1, 3855.11, 3848.0, 3848.86, 3631.184]\n",
-      "2021-10-17 23:30:00 [3848.96, 3856.74, 3846.7, 3856.67, 2652.491]\n",
-      "2021-10-17 23:35:00 [3856.68, 3856.98, 3853.59, 3853.87, 172.06]\n"
+      "2021-10-18 01:35:00 [3815.74, 3816.36, 3807.79, 3808.0, 3669.59]\n",
+      "2021-10-18 01:40:00 [3808.01, 3810.68, 3804.0, 3807.93, 3828.246]\n",
+      "2021-10-18 01:45:00 [3807.93, 3811.69, 3801.18, 3802.53, 2586.143]\n",
+      "2021-10-18 01:50:00 [3802.53, 3811.63, 3802.09, 3810.37, 2555.941]\n",
+      "2021-10-18 01:55:00 [3810.35, 3815.27, 3808.21, 3813.88, 3432.268]\n",
+      "2021-10-18 02:00:00 [3813.81, 3813.81, 3806.1, 3808.99, 2615.307]\n",
+      "2021-10-18 02:05:00 [3808.99, 3809.39, 3802.0, 3802.98, 2110.707]\n",
+      "2021-10-18 02:10:00 [3802.99, 3803.1, 3798.67, 3802.65, 2398.536]\n",
+      "2021-10-18 02:15:00 [3802.65, 3802.83, 3791.83, 3797.63, 3915.485]\n",
+      "2021-10-18 02:20:00 [3797.63, 3798.78, 3793.23, 3796.01, 1821.419]\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd2ef238",
+   "id": "247d8ab7",
    "metadata": {},
    "source": [
     "---"
@@ -290,8 +290,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "id": "ea8c81e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binance.trades"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
-   "id": "25fdcf47",
+   "id": "613121f0",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f7f800d1",
+   "id": "a1121aaa",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c1a4b104",
+   "id": "86648491",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d6a1a3",
+   "id": "355eae97",
    "metadata": {},
    "outputs": [],
    "source": []
