첫 구매 조건 및 물타기 기능 구현

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "id": "905a1cdf",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import ccxt\n",
     "import pprint\n",
     "from datetime import datetime\n",
-    "from slacker import Slacker"
+    "from slacker import Slacker\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "93536e30",
    "metadata": {},
    "outputs": [],
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "d213afe7",
    "metadata": {},
    "outputs": [],
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "id": "c450d5a2",
    "metadata": {},
    "outputs": [
@@ -115,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'free': 80.2898479, 'used': 0.76103315, 'total': 80.967141}\n"
+      "{'free': 80.95354954, 'used': 0.0, 'total': 80.95354954}\n"
      ]
     }
    ],
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a10c100a",
    "metadata": {},
    "outputs": [],
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "id": "08b5928e",
    "metadata": {
     "scrolled": true
@@ -165,16 +166,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-10-18 01:35:00 [3815.74, 3816.36, 3807.79, 3808.0, 3669.59]\n",
-      "2021-10-18 01:40:00 [3808.01, 3810.68, 3804.0, 3807.93, 3828.246]\n",
-      "2021-10-18 01:45:00 [3807.93, 3811.69, 3801.18, 3802.53, 2586.143]\n",
-      "2021-10-18 01:50:00 [3802.53, 3811.63, 3802.09, 3810.37, 2555.941]\n",
-      "2021-10-18 01:55:00 [3810.35, 3815.27, 3808.21, 3813.88, 3432.268]\n",
-      "2021-10-18 02:00:00 [3813.81, 3813.81, 3806.1, 3808.99, 2615.307]\n",
-      "2021-10-18 02:05:00 [3808.99, 3809.39, 3802.0, 3802.98, 2110.707]\n",
-      "2021-10-18 02:10:00 [3802.99, 3803.1, 3798.67, 3802.65, 2398.536]\n",
-      "2021-10-18 02:15:00 [3802.65, 3802.83, 3791.83, 3797.63, 3915.485]\n",
-      "2021-10-18 02:20:00 [3797.63, 3798.78, 3793.23, 3796.01, 1821.419]\n"
+      "2021-10-20 00:10:00 [3800.9, 3812.97, 3799.22, 3806.68, 4744.012]\n",
+      "2021-10-20 00:15:00 [3806.69, 3818.84, 3803.41, 3808.0, 8986.006]\n",
+      "2021-10-20 00:20:00 [3808.14, 3813.78, 3780.0, 3799.48, 27808.379]\n",
+      "2021-10-20 00:25:00 [3799.48, 3805.57, 3794.61, 3799.14, 5413.68]\n",
+      "2021-10-20 00:30:00 [3799.14, 3803.56, 3794.73, 3798.72, 3958.311]\n",
+      "2021-10-20 00:35:00 [3798.72, 3801.14, 3796.42, 3799.06, 2434.759]\n",
+      "2021-10-20 00:40:00 [3799.23, 3802.61, 3798.21, 3800.09, 1906.846]\n",
+      "2021-10-20 00:45:00 [3800.09, 3800.46, 3787.83, 3794.0, 5032.867]\n",
+      "2021-10-20 00:50:00 [3794.0, 3796.47, 3790.0, 3793.06, 2782.586]\n",
+      "2021-10-20 00:55:00 [3793.05, 3796.79, 3775.2, 3776.43, 8877.966]\n",
+      "2021-10-20 01:00:00 [3776.51, 3785.88, 3776.5, 3779.01, 8521.054]\n",
+      "2021-10-20 01:05:00 [3779.01, 3788.6, 3778.61, 3785.14, 3761.961]\n",
+      "2021-10-20 01:10:00 [3785.13, 3790.57, 3780.01, 3781.77, 4904.484]\n",
+      "2021-10-20 01:15:00 [3781.73, 3789.35, 3777.62, 3788.56, 3016.655]\n",
+      "2021-10-20 01:20:00 [3788.55, 3794.0, 3787.9, 3793.33, 5022.619]\n",
+      "2021-10-20 01:25:00 [3793.35, 3794.86, 3786.36, 3790.82, 4783.954]\n",
+      "2021-10-20 01:30:00 [3790.83, 3790.83, 3783.59, 3784.65, 3462.867]\n",
+      "2021-10-20 01:35:00 [3784.65, 3791.56, 3780.73, 3791.37, 2146.983]\n",
+      "2021-10-20 01:40:00 [3791.36, 3802.37, 3788.36, 3791.37, 12650.329]\n",
+      "2021-10-20 01:45:00 [3791.36, 3796.97, 3789.91, 3794.56, 2103.907]\n"
      ]
     }
    ],
@@ -184,9 +195,86 @@
     "    symbol=\"ETH/USDT\", \n",
     "    timeframe='5m', \n",
     "    since=None, \n",
-    "    limit=10)\n",
+    "    limit=20)\n",
     "for e in eth5m:\n",
     "    print(showDateTime(e[0]), e[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "57d74341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candleL = []\n",
+    "for e in eth5m[:-10]:\n",
+    "    candle = e[4]-e[1]\n",
+    "    if candle > 3:\n",
+    "        candleL.append(\"white\")\n",
+    "    elif candle <- 10:\n",
+    "        candleL.append(\"big black\")\n",
+    "    elif candle < -3:\n",
+    "        candleL.append(\"black\")\n",
+    "#     else:\n",
+    "#         candleL.append(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b2e6da22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['white', 'black', 'black', 'big black']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candleL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c8a56031",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if(len(candleL) < 3):\n",
+    "#     return False\n",
+    "goodStack = 0\n",
+    "bigStack = 0\n",
+    "for i in range(len(candleL)-1, -1, -1):\n",
+    "    if candleL[i] == \"white\":\n",
+    "#         return False\n",
+    "        print(False)\n",
+    "        break\n",
+    "    elif candleL[i] == \"big black\":\n",
+    "        goodStack += 1\n",
+    "        bigStack = 1\n",
+    "    elif candleL[i] == \"black\":\n",
+    "        goodStack += 1\n",
+    "    if (goodStack + bigStack) >= 4:\n",
+    "        print(True)\n",
+    "        break\n",
+    "#         return True\n",
+    "# return False"
    ]
   },
   {
@@ -269,7 +357,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 51,
+   "id": "dfd75c86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20211020'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def getTodayDate():\n",
+    "    now = datetime.now()\n",
+    "    nowDate = now.strftime('%Y%m%d')\n",
+    "    return nowDate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "accaa17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "price = 3849.86\n",
+    "updateTime = '1634482056016'\n",
+    "\n",
+    "fileName = getTodayDate()+\".txt\"\n",
+    "try:\n",
+    "    with open(fileName) as f:\n",
+    "        lines = f.readlines()\n",
+    "except:\n",
+    "    f = open(fileName, \"w\")\n",
+    "    f.close()\n",
+    "    lines = []\n",
+    "lines.append(updateTime + \"\\n\")\n",
+    "with open(fileName, \"w\") as f:\n",
+    "    for line in lines:\n",
+    "        f.write(line)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "id": "95880f48",
    "metadata": {},
    "outputs": [
@@ -277,7 +414,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'symbol': 'ETHUSDT', 'initialMargin': '0.76107348', 'maintMargin': '0.03805367', 'unrealizedProfit': '-0.08898516', 'positionInitialMargin': '0.76107348', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '3849.86', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '0.002', 'notional': '7.61073483', 'isolatedWallet': '0.76668155', 'updateTime': '1634486400385'}\n"
+      "{'symbol': 'ETHUSDT', 'initialMargin': '0', 'maintMargin': '0', 'unrealizedProfit': '0.00000000', 'positionInitialMargin': '0', 'openOrderInitialMargin': '0', 'leverage': '10', 'isolated': True, 'entryPrice': '0.0', 'maxNotional': '4000000', 'positionSide': 'BOTH', 'positionAmt': '0.000', 'notional': '0', 'isolatedWallet': '0', 'updateTime': '1634491502625'}\n",
+      "False\n",
+      "0.0\n"
      ]
     }
    ],
@@ -285,7 +424,55 @@
     "# 현재 포지션 확인\n",
     "balance = binance.fetch_balance()\n",
     "position = [x for x in balance['info']['positions'] if x['symbol'] == \"ETHUSDT\"][0]\n",
-    "print(position)"
+    "print(position)\n",
+    "print(float(position[\"positionAmt\"]) > 0)\n",
+    "print(position[\"entryPrice\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "e991841b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance = binance.fetch_balance()\n",
+    "entryPrice = float([x for x in balance['info']['positions'] if x['symbol'] == \"ETHUSDT\"][0][\"entryPrice\"])\n",
+    "entryPrice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "f2632207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "balance = binance.fetch_balance()\n",
+    "float([x for x in balance['info']['positions'] if x['symbol'] == \"ETHUSDT\"][0][\"positionAmt\"])"
    ]
   },
   {
@@ -308,6 +495,35 @@
    "source": [
     "binance.trades"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "911bd128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 10, 20, 2, 22, 47, 919297)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8149e36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -472,8 +688,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "355eae97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이전 봉에 구매 이력 있어서 스킵\n",
+      "1634664650.381064\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1634663700000, 3821.2, 3823.57, 3812.44, 3813.35, 10643.144],\n",
+       " [1634664600000, 3813.35, 3814.0, 3808.63, 3809.93, 1806.216]]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 물타기\n",
+    "fileName = getTodayDate() + \".txt\"\n",
+    "with open(fileName) as f:\n",
+    "    lines = f.readlines()\n",
+    "eth15m = binance.fetch_ohlcv(\n",
+    "    symbol=\"ETH/USDT\",\n",
+    "    timeframe='15m',\n",
+    "    since=None,\n",
+    "    limit=2)\n",
+    "candle = eth15m[0]\n",
+    "if int(lines[-1].split()[0]) > candle[0]:\n",
+    "    print(\"이전 봉에 구매 이력 있어서 물타기 스킵\")\n",
+    "else:\n",
+    "    if candle[4] - candle[1] < -3:\n",
+    "        print(\"물타기 하기~\")\n",
+    "        water()\n",
+    "    else:\n",
+    "        print(\"이번 봉은 음봉이 아니라 물타기 스킵\")\n",
+    "eth15m[0]\n",
+    "print(time.time())\n",
+    "eth15m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "369246fa",
    "metadata": {},
    "outputs": [],
    "source": []
