checkIfGoodToBuy 로직 수정
bigblack 없앰

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -202,79 +202,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "57d74341",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "candleL = []\n",
-    "for e in eth5m[:-10]:\n",
-    "    candle = e[4]-e[1]\n",
-    "    if candle > 3:\n",
-    "        candleL.append(\"white\")\n",
-    "    elif candle <- 10:\n",
-    "        candleL.append(\"big black\")\n",
-    "    elif candle < -3:\n",
-    "        candleL.append(\"black\")\n",
-    "#     else:\n",
-    "#         candleL.append(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "b2e6da22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['white', 'black', 'black', 'big black']"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "candleL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "c8a56031",
+   "execution_count": 112,
+   "id": "91cfb47c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "['', 'black', 'black', '', 'black', 'white', '', '', 'black', '']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# if(len(candleL) < 3):\n",
-    "#     return False\n",
-    "goodStack = 0\n",
-    "bigStack = 0\n",
-    "for i in range(len(candleL)-1, -1, -1):\n",
-    "    if candleL[i] == \"white\":\n",
-    "#         return False\n",
-    "        print(False)\n",
-    "        break\n",
-    "    elif candleL[i] == \"big black\":\n",
-    "        goodStack += 1\n",
-    "        bigStack = 1\n",
-    "    elif candleL[i] == \"black\":\n",
-    "        goodStack += 1\n",
-    "    if (goodStack + bigStack) >= 4:\n",
-    "        print(True)\n",
-    "        break\n",
-    "#         return True\n",
-    "# return False"
+    "def checkIfGoodToBuy():\n",
+    "    eth5m = binance.fetch_ohlcv(\n",
+    "        symbol=\"ETH/USDT\",\n",
+    "        timeframe='5m',\n",
+    "        since=None,\n",
+    "        limit=10)\n",
+    "    candleL = []\n",
+    "    for e in eth5m:\n",
+    "        candle = e[4] - e[1]\n",
+    "        if candle > 3:\n",
+    "            candleL.append(\"white\")\n",
+    "        elif candle < -3:\n",
+    "            candleL.append(\"black\")\n",
+    "        else:\n",
+    "            candleL.append(\"\")\n",
+    "    print(candleL)\n",
+    "    if len(candleL) < 3:\n",
+    "        return False\n",
+    "    goodStack = 0\n",
+    "    for i in range(len(candleL) - 1, -1, -1):\n",
+    "        if candleL[i] == \"white\":\n",
+    "            return False\n",
+    "        elif candleL[i] == \"black\":\n",
+    "            goodStack += 1\n",
+    "        elif candleL[i] == \"\" and goodStack >= 3:\n",
+    "            return True\n",
+    "        if goodStack >= 4:\n",
+    "            return True\n",
+    "    return False\n",
+    "checkIfGoodToBuy()"
    ]
   },
   {
@@ -358,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "dfd75c86",
+   "id": "dabfde52",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "accaa17f",
+   "id": "6d7e68e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e991841b",
+   "id": "8f50aa4e",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f2632207",
+   "id": "b61c5943",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "911bd128",
+   "id": "b4c44489",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8149e36",
+   "id": "d8119bf3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -739,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369246fa",
+   "id": "79b9a364",
    "metadata": {},
    "outputs": [],
    "source": []
