--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 114,
    "id": "08b5928e",
    "metadata": {
     "scrolled": true
@@ -166,26 +166,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-10-20 00:10:00 [3800.9, 3812.97, 3799.22, 3806.68, 4744.012]\n",
-      "2021-10-20 00:15:00 [3806.69, 3818.84, 3803.41, 3808.0, 8986.006]\n",
-      "2021-10-20 00:20:00 [3808.14, 3813.78, 3780.0, 3799.48, 27808.379]\n",
-      "2021-10-20 00:25:00 [3799.48, 3805.57, 3794.61, 3799.14, 5413.68]\n",
-      "2021-10-20 00:30:00 [3799.14, 3803.56, 3794.73, 3798.72, 3958.311]\n",
-      "2021-10-20 00:35:00 [3798.72, 3801.14, 3796.42, 3799.06, 2434.759]\n",
-      "2021-10-20 00:40:00 [3799.23, 3802.61, 3798.21, 3800.09, 1906.846]\n",
-      "2021-10-20 00:45:00 [3800.09, 3800.46, 3787.83, 3794.0, 5032.867]\n",
-      "2021-10-20 00:50:00 [3794.0, 3796.47, 3790.0, 3793.06, 2782.586]\n",
-      "2021-10-20 00:55:00 [3793.05, 3796.79, 3775.2, 3776.43, 8877.966]\n",
-      "2021-10-20 01:00:00 [3776.51, 3785.88, 3776.5, 3779.01, 8521.054]\n",
-      "2021-10-20 01:05:00 [3779.01, 3788.6, 3778.61, 3785.14, 3761.961]\n",
-      "2021-10-20 01:10:00 [3785.13, 3790.57, 3780.01, 3781.77, 4904.484]\n",
-      "2021-10-20 01:15:00 [3781.73, 3789.35, 3777.62, 3788.56, 3016.655]\n",
-      "2021-10-20 01:20:00 [3788.55, 3794.0, 3787.9, 3793.33, 5022.619]\n",
-      "2021-10-20 01:25:00 [3793.35, 3794.86, 3786.36, 3790.82, 4783.954]\n",
-      "2021-10-20 01:30:00 [3790.83, 3790.83, 3783.59, 3784.65, 3462.867]\n",
-      "2021-10-20 01:35:00 [3784.65, 3791.56, 3780.73, 3791.37, 2146.983]\n",
-      "2021-10-20 01:40:00 [3791.36, 3802.37, 3788.36, 3791.37, 12650.329]\n",
-      "2021-10-20 01:45:00 [3791.36, 3796.97, 3789.91, 3794.56, 2103.907]\n"
+      "1634703300000\n",
+      "2021-10-20 13:15:00 [3851.07, 3855.85, 3850.63, 3853.47, 2022.222]\n",
+      "1634703600000\n",
+      "2021-10-20 13:20:00 [3853.48, 3855.17, 3850.18, 3850.23, 1749.464]\n",
+      "1634703900000\n",
+      "2021-10-20 13:25:00 [3850.23, 3851.05, 3846.31, 3848.54, 2713.426]\n",
+      "1634704200000\n",
+      "2021-10-20 13:30:00 [3848.54, 3852.98, 3846.29, 3847.82, 1109.434]\n",
+      "1634704500000\n",
+      "2021-10-20 13:35:00 [3847.82, 3857.0, 3847.69, 3855.72, 2941.829]\n",
+      "1634704800000\n",
+      "2021-10-20 13:40:00 [3855.73, 3857.39, 3851.65, 3857.01, 2124.791]\n",
+      "1634705100000\n",
+      "2021-10-20 13:45:00 [3857.01, 3860.53, 3856.97, 3860.03, 2492.459]\n",
+      "1634705400000\n",
+      "2021-10-20 13:50:00 [3860.02, 3860.62, 3855.0, 3856.2, 3046.297]\n",
+      "1634705700000\n",
+      "2021-10-20 13:55:00 [3856.21, 3862.4, 3854.05, 3859.99, 2066.788]\n",
+      "1634706000000\n",
+      "2021-10-20 14:00:00 [3859.98, 3862.0, 3853.25, 3854.01, 2413.037]\n",
+      "1634706300000\n",
+      "2021-10-20 14:05:00 [3854.01, 3863.2, 3853.46, 3862.91, 3346.112]\n",
+      "1634706600000\n",
+      "2021-10-20 14:10:00 [3862.9, 3863.81, 3861.21, 3862.49, 1869.093]\n",
+      "1634706900000\n",
+      "2021-10-20 14:15:00 [3862.5, 3863.36, 3855.0, 3857.44, 2496.775]\n",
+      "1634707200000\n",
+      "2021-10-20 14:20:00 [3857.79, 3858.57, 3853.93, 3855.05, 921.447]\n",
+      "1634707500000\n",
+      "2021-10-20 14:25:00 [3855.05, 3859.06, 3854.13, 3857.81, 1333.895]\n",
+      "1634707800000\n",
+      "2021-10-20 14:30:00 [3857.99, 3861.5, 3852.15, 3856.15, 2510.568]\n",
+      "1634708100000\n",
+      "2021-10-20 14:35:00 [3856.14, 3857.15, 3843.13, 3843.76, 6924.812]\n",
+      "1634708400000\n",
+      "2021-10-20 14:40:00 [3843.76, 3849.04, 3840.41, 3845.47, 4675.627]\n",
+      "1634708700000\n",
+      "2021-10-20 14:45:00 [3845.42, 3846.95, 3836.0, 3836.68, 8346.451]\n",
+      "1634709000000\n",
+      "2021-10-20 14:50:00 [3836.69, 3838.26, 3830.0, 3835.62, 8878.737]\n"
      ]
     }
    ],
@@ -197,13 +217,14 @@
     "    since=None, \n",
     "    limit=20)\n",
     "for e in eth5m:\n",
+    "    print(e[0])\n",
     "    print(showDateTime(e[0]), e[1:])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "91cfb47c",
+   "id": "99ed17a2",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "dabfde52",
+   "id": "a66aff76",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6d7e68e9",
+   "id": "fa6ef181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "8f50aa4e",
+   "id": "37c26510",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b61c5943",
+   "id": "5a118d86",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b4c44489",
+   "id": "27021964",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8119bf3",
+   "id": "68231ae2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -719,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b9a364",
+   "id": "51ffec54",
    "metadata": {},
    "outputs": [],
    "source": []
