--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "905a1cdf",
    "metadata": {},
    "outputs": [],
@@ -685,6 +685,33 @@
    "source": [
     "# 모든 대기 주문 취소\n",
     "binance.cancel_all_orders(symbol = \"ETH/USDT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e3d7adfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1634787000000, 4153.31, 4177.86, 4145.61, 4176.14, 6891.7411],\n",
+       " [1634787900000, 4176.15, 4192.0, 4175.53, 4183.41, 2199.1437]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eth15m = binance.fetch_ohlcv(\n",
+    "    symbol=\"ETH/USDT\",\n",
+    "    timeframe='15m',\n",
+    "    since=None,\n",
+    "    limit=2)\n",
+    "eth15m"
    ]
   },
   {
