record 가장 최근것 하나만 사용하도록 수정

--- a/binance_auto.ipynb
+++ b/binance_auto.ipynb
@@ -765,9 +765,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be9a8052",
+   "metadata": {},
+   "source": [
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e8369531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# record 관리\n",
+    "recordFilePath = \"record.txt\"\n",
+    "def writeRecord(updateTime):\n",
+    "    with open(recordFilePath, \"w\") as f:\n",
+    "        f.write(updateTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "84440a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(recordFilePath) as f:\n",
+    "    lines = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "97897716",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1635007505293']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eb563f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writeRecord(\"1635007505293\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ffec54",
+   "id": "0261b5b9",
    "metadata": {},
    "outputs": [],
    "source": []
